added two apis, this is test version, not completed task
